--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "serve": "nodemon dist/server.js",
     "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve\"",
     "test": "jest --forceExit",
+    "testing": "jest --forceExit --watch",
     "build-ts": "tsc",
     "watch-ts": "tsc -w",
     "tslint": "tslint -c tslint.json -p tsconfig.json",
     "debug": "npm run build && npm run watch-debug",
     "serve-debug": "nodemon --inspect dist/server.js",
-    "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\""
+    "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\"",
+    "watch-test": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\" \"npm run test\""
   },
   "jest": {
     "globals": {
@@ -38,7 +40,6 @@
     "testEnvironment": "node"
   },
   "dependencies": {
-    "@types/express-validator": "^3.0.0",
     "@types/mysql": "^2.15.2",
     "@types/passport-local": "^1.0.32",
     "async": "^2.1.2",
@@ -49,14 +50,16 @@
     "dotenv": "^2.0.0",
     "errorhandler": "^1.4.3",
     "express": "^4.14.0",
-    "express-flash": "^0.0.2",
+    "express-jwt": "^5.3.0",
     "express-session": "^1.14.2",
-    "express-validator": "^3.1.3",
+    "express-validator": "^4.3.0",
     "fbgraph": "^1.3.0",
+    "jsonwebtoken": "^8.1.0",
     "lodash": "^4.17.4",
     "lusca": "^1.4.1",
     "mongoose": "^4.6.6",
     "morgan": "^1.7.0",
+    "morgan-body": "^2.0.2",
     "mysql": "^2.15.0",
     "nodemailer": "^2.6.4",
     "passport": "0.3.2",
@@ -75,9 +78,11 @@
     "@types/errorhandler": "0.0.30",
     "@types/es6-promise": "0.0.33",
     "@types/express": "^4.0.35",
+    "@types/express-jwt": "0.0.38",
     "@types/express-session": "0.0.32",
     "@types/jest": "^19.2.2",
     "@types/jquery": "^2.0.41",
+    "@types/jsonwebtoken": "^7.2.4",
     "@types/lodash": "^4.14.63",
     "@types/mongodb": "^2.1.43",
     "@types/mongoose": "^4.7.9",
