--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "jest": "^19.0.2",
     "node-sass": "^4.5.2",
     "nodemon": "^1.11.0",
+    "readline": "^1.3.0",
     "shelljs": "^0.7.7",
     "supertest": "^2.0.1",
     "ts-jest": "^19.0.8",
