--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "errorhandler": "^1.4.3",
     "express": "^4.14.0",
     "express-jwt": "^5.3.0",
+    "express-mung": "^0.4.6",
     "express-session": "^1.14.2",
     "express-validator": "^4.3.0",
     "fbgraph": "^1.3.0",
@@ -78,6 +79,7 @@
     "@types/es6-promise": "0.0.33",
     "@types/express": "^4.0.35",
     "@types/express-jwt": "0.0.38",
+    "@types/express-mung": "^0.4.2",
     "@types/express-session": "0.0.32",
     "@types/jest": "^19.2.2",
     "@types/jquery": "^2.0.41",
