--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "testEnvironment": "node"
   },
   "dependencies": {
+    "@types/faker": "^4.1.2",
     "@types/mysql": "^2.15.2",
     "@types/passport-local": "^1.0.32",
     "async": "^2.1.2",
@@ -53,6 +54,7 @@
     "express-mung": "^0.4.6",
     "express-session": "^1.14.2",
     "express-validator": "^4.3.0",
+    "faker": "^4.1.0",
     "fbgraph": "^1.3.0",
     "jsonwebtoken": "^8.1.0",
     "lodash": "^4.17.4",
